Collapse survey preview to fix overflow

--- a/app/assets/stylesheets/controllers/view.scss
+++ b/app/assets/stylesheets/controllers/view.scss
@@ -11,4 +11,15 @@
     }
   }
 
+  .survey {
+    @media (min-width: $screen-lg-min) {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    @media (max-width: $screen-lg-min) {
+      margin-bottom: 20px;
+    }
+  }
+
 }
